# tgloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.config.ini  example.config.sh  me.session-journal  pyproject.toml  temp.py
.github/workflows/: demo.yml  deploy_server.yml  pr_tests.yml  stage.yml  tests.yml
loader/: auth.py  cli.py  config.py  ioc.py
loader/adapters/: input_file.py  stub_http.py  teleclient.py  youtube.py
loader/adapters/database/: gateway.py  models.py
loader/adapters/database/migrations/: env.py
loader/adapters/database/migrations/versions/: 60035960d9f4_create_tables.py  c12e90e10dcb_.py
loader/application/: __init__.py  file_database.py  user_database.py  userfile_database.py  youtube.py
loader/domain/: common.py  enums.py  protocols.py  schemes.py
loader/domain/models/: __init__.py  file.py  user.py  user_file.py
loader/domain/protocols/: __init__.py  contracts.py  database.py  youtube.py
loader/domain/services/: protocols.py  youtube.py
loader/main/: cli.py  config.py
loader/tgbot/filters/: user.py
loader/tgbot/handlers/: from_client.py  fromclient.py  user.py
loader/tgbot/middlewares/: common.py
loader/tgclient/: client.py
loader/tgclient/handlers/: from_bot.py  frombot.py
scripts/: lint.sh
tests/: conftest.py
tests/integration/: conftest.py  test_db.py  test_redis.py  test_youtube.py
tests/unit/: test_basedto.py
